--- a/Memory/MainWindow.xaml
+++ b/Memory/MainWindow.xaml
@@ -15,7 +15,7 @@
             <Setter Property="Background">
                 <Setter.Value>
                     <LinearGradientBrush StartPoint="0.5, 1" EndPoint="0.5, 0">
-                        <GradientStop Color="Orange" Offset="1"/>
+                        <GradientStop Color="#FFC33434" Offset="1"/>
                         <GradientStop Color="White" Offset="0"/>
                     </LinearGradientBrush>
                 </Setter.Value>
@@ -23,15 +23,46 @@
             <Setter Property="CornerRadius" Value="5"/>
             <Setter Property="Margin" Value="2.5"/>
         </Style>
+
+        <Style TargetType="{x:Type Border}" x:Key="TarjetaVolteada">
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0.5, 1" EndPoint="0.5, 0">
+                        <GradientStop Color="#FF00C5FF" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="CornerRadius" Value="5"/>
+            <Setter Property="Margin" Value="2.5"/>
+        </Style>
+
+        <Style TargetType="{x:Type Border}" x:Key="ParejaEncontrada">
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0.5, 1" EndPoint="0.5, 0">
+                        <GradientStop Color="LawnGreen" Offset="1"/>
+                        <GradientStop Color="White" Offset="0"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="CornerRadius" Value="5"/>
+            <Setter Property="Margin" Value="2.5"/>
+        </Style>
+
+        <Style TargetType="{x:Type TextBlock}" x:Key="Fuente">
+            <Setter Property="FontFamily" Value="Wingdings"/>
+        </Style>
     </Window.Resources>
         
-        
-
     <Grid>
         <DockPanel LastChildFill="True">
 
             <Border DockPanel.Dock="Top" Background="White" BorderBrush="Black" BorderThickness="3" Height="50" Margin="5" CornerRadius="5" Padding="10">
-
                 <StackPanel Orientation="Horizontal">
 
                     <TextBlock Text="Dificultad: " VerticalAlignment="Center"/>
@@ -47,27 +78,21 @@
                     </Button>
 
                 </StackPanel>
-
-
             </Border>
 
             <Border DockPanel.Dock="Bottom" Background="White" BorderBrush="Black" BorderThickness="3" Height="50" Margin="5" CornerRadius="5" Padding="10">
-
                 <DockPanel LastChildFill="True">
 
-                    <Button DockPanel.Dock="Right" x:Name="MostrarButton" Content="Mostrar" Margin="25, 0" Width="75">
+                    <Button DockPanel.Dock="Right" x:Name="MostrarButton" Content="Mostrar" Margin="25, 0" Width="75" IsEnabled="False" Click="MostrarButton_Click">
                         <Button.BitmapEffect>
                             <DropShadowBitmapEffect Color="Black" Direction="320" Softness="1" ShadowDepth="10" Opacity="1"/>
                         </Button.BitmapEffect>
                     </Button>
 
-                    <ProgressBar x:Name="ProgressBar">
-
-                    </ProgressBar>
+                    <ProgressBar x:Name="ProgressBar"/>
 
                 </DockPanel>
-
-            </Border>
+             </Border>
 
             <Grid x:Name="TarjetasGrid" ShowGridLines="False">
                 <Grid.ColumnDefinitions>
