--- a/Memory/MainWindow.xaml
+++ b/Memory/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Memory"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="500" MinHeight="500" MinWidth="500"
+        Title="Memory Game" Height="500" Width="500" MinHeight="500" MinWidth="500"
         Background="LightSalmon">
 
     <Window.Resources>
